<resources>
    <string name="app_name">HoopHacks3</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log Out</string>
    <string name="action_user_profile">My Profile</string>
    <string name="action_skill_areas">Skill Areas</string>
    <string name="action_userfeed">User Feed</string>
    <string name="action_update_profile">Update Profile</string>
    <string name="action_view_results">View Results</string>
    <string name="action_enter_results">Enter Results</string>
    <string name="action_view_workout">View Workout</string>
    <string name="action_create_workout">Create Workout</string>
    <string name="action_menu">Menu</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_register_profile">RegisterProfile</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="title_activity_skill_areas">SkillAreas</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_exercise_list">ExerciseList</string>
    <string name="title_activity_exercises">exercises</string>
    <string name="title_activity_exercise">Exercise</string>
    <string name="title_activity_exercise_view">ExerciseView</string>
    <string name="title_activity_enter_results">EnterResults</string>
    <string name="title_activity_view_results">ViewResults</string>
    <string name="title_activity_user_feed">UserFeed</string>
    <string name="title_activity_countdown_timer">CountdownTimer</string>
    <string name="title_activity_menu">Menu</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="title_activity_exercise_view_video">ExerciseViewVideo</string>
    <string name="title_activity_create_exercise">CreateExercise</string>
    <string name="title_activity_workout_add_exercises">WorkoutAddExercises</string>
    <string name="title_activity_workout_view">WorkoutView</string>
    <string name="title_activity_workout_exercise_view">WorkoutExerciseView</string>
</resources>


