<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.hoophacks.hoophacks3.SkillAreas">
    <item
        android:id="@+id/action_user_profile"
        android:orderInCategory="100"
        android:title="@string/action_user_profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_view_results"
        android:orderInCategory="100"
        android:title="Results"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>